@@ -35,7 +35,6 @@
     <setting id="stream_read_timeout" label="30116" type="slider" default="2500" range="500,500,5000" option="int"/>
     <setting id="stream_read_minimum_byte_count" label="30114" type="enum" lvalues="30218|30219|30220|30221|30222|30223|30229" default="3"/>
     <setting id="stream_ring_buffer_size" label="30115" type="enum" lvalues="30224|30225|30226|30227|30228" default="0"/>
-    <setting id="disable_realtime_indicator" label="30125" type="bool" default="false"/>
   </category>
 
 </settings>
